--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "brids"
 version = "0.3.0"
 authors = ["Ricardo Silva Veloso <ricvelozo@gmail.com>"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = """
 Parse and generate random CPF/ICN and CNPJ, Brazil's ID numbers.
 """
-repository = "https://github.com/ricvelozo/brids-rs"
+repository = "https://gitlab.com/ricvelozo/brids-rs"
 documentation = "https://docs.rs/brids"
 keywords = ["parser", "format", "validation", "cpf", "cnpj"]
 categories = ["parser-implementations", "value-formatting"]
