--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT OR Apache-2.0"
 description = """
 Parse and generate random CPF/ICN and CNPJ, Brazil's ID numbers.
 """
+edition = "2018"
 repository = "https://gitlab.com/ricvelozo/brids-rs"
 documentation = "https://docs.rs/brids"
 keywords = ["parser", "format", "validation", "cpf", "cnpj"]
@@ -22,6 +23,3 @@ random = ["rand"]
 [dependencies]
 failure = "0.1.1"
 rand = { version = "0.4", optional = true }
-
-[dev-dependencies]
-matches = "0.1.6"
