Add GitLab badge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["parser-implementations", "value-formatting"]
 readme = "README.markdown"
 
 [badges]
+gitlab = { repository = "ricvelozo/brids-rs" }
 travis-ci = { repository = "ricvelozo/brids-rs" }
 
 [features]
