--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,33 @@ keywords = ["parser", "format", "validation", "cpf", "cnpj"]
 categories = ["parser-implementations", "value-formatting"]
 readme = "README.markdown"
 
+[package.metadata.docs.rs]
+all-features = true
+
 [badges]
 gitlab = { repository = "ricvelozo/brids-rs" }
 travis-ci = { repository = "ricvelozo/brids-rs" }
 
-[features]
-default = ["random"]
-random = ["rand"]
-
 [dependencies]
 failure = "0.1"
 rand = { version = "0.6", optional = true }
+serde = { version = "1.0", optional = true }
+
+[dev-dependencies]
+serde_derive = "1.0"
+serde_json = "1.0"
+
+[features]
+default = ["rand"]
+
+[[example]]
+name = "random"
+required-features = ["rand"]
+
+[[example]]
+name = "seed"
+required-features = ["rand"]
+
+[[example]]
+name = "serde"
+required-features = ["rand", "serde"]
