--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ Parse and generate random CPF/ICN and CNPJ, Brazil's ID numbers.
 edition = "2018"
 repository = "https://gitlab.com/ricvelozo/brids-rs"
 documentation = "https://docs.rs/brids"
-keywords = ["parser", "format", "validation", "cpf", "cnpj"]
+keywords = ["parser", "format", "validation", "cpf", "cnpj", "serde"]
 categories = ["parser-implementations", "value-formatting"]
 readme = "README.markdown"
 
