--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://gitlab.com/ricvelozo/brids-rs"
 documentation = "https://docs.rs/brids"
 keywords = ["parser", "format", "validation", "cpf", "cnpj", "serde"]
 categories = ["parser-implementations", "value-formatting"]
-readme = "README.markdown"
+readme = "README.md"
 
 [package.metadata.docs.rs]
 all-features = true
