--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,20 +5,20 @@ rust-latest:
   stage: build
   image: rust:latest
   script:
-    - cargo build --verbose
-    - cargo test --verbose
+    - cargo build --verbose --all-features
+    - cargo test --verbose --all-features
 
 rust-beta:
   stage: build
   image: rustdocker/rust:beta
   script:
-    - cargo build --verbose
-    - cargo test --verbose
+    - cargo build --verbose --all-features
+    - cargo test --verbose --all-features
 
 rust-nightly:
   stage: build
   image: rustlang/rust:nightly
   script:
-    - cargo build --verbose
-    - cargo test --verbose
+    - cargo build --verbose --all-features
+    - cargo test --verbose --all-features
   allow_failure: true
