--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ rust:
   - stable
   - beta
   - nightly
+script:
+  - cargo build --verbose --all-features
+  - cargo test --verbose --all-features
 matrix:
   allow_failures:
     - rust: nightly
