--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,18 +21,25 @@ all-features = true
 gitlab = { repository = "ricvelozo/brids-rs" }
 travis-ci = { repository = "ricvelozo/brids-rs" }
 
-[dependencies]
-rand = { version = "0.7", optional = true }
-serde = { version = "1.0", optional = true }
+[dependencies.rand]
+version = "0.8"
+optional = true
+default-features = false
+features = ["std_rng"]
+
+[dependencies.serde]
+version = "1.0"
+optional = true
+default-features = false
 
 [dev-dependencies]
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_test = "1.0"
 
 [features]
-default = ["std", "rand"]
-std = []
+default = ["std"]
+std = ["rand/std", "serde/std"]
 
 [[example]]
 name = "random"
