--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ license = "MIT OR Apache-2.0"
 description = """
 Parse and generate random CPF and CNPJ, Brazil's ID numbers.
 """
-edition = "2021"
-rust-version = "1.81"
+edition = "2024"
+rust-version = "1.85"
 repository = "https://gitlab.com/ricvelozo/brids-rs"
 documentation = "https://docs.rs/brids"
 keywords = ["parser", "format", "validation", "cpf", "cnpj"]
@@ -21,10 +21,10 @@ all-features = true
 gitlab = { repository = "ricvelozo/brids-rs" }
 
 [dependencies.rand]
-version = "0.8.5"
+version = "0.9.0"
 optional = true
 default-features = false
-features = ["std_rng"]
+features = ["thread_rng"]
 
 [dependencies.serde]
 version = "1.0"
